--- a/xFunc/Views/PlottingGraph.xaml
+++ b/xFunc/Views/PlottingGraph.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
-            <RowDefinition Height="39" />
+            <RowDefinition x:Name="secondRow" Height="39" />
         </Grid.RowDefinitions>
 
         <views:DrawingCanvas x:Name="canvas" Grid.Row="0" Background="#FFEFEFEF" SnapsToDevicePixels="True"  />
